fix z-index issue

--- a/css/index.css
+++ b/css/index.css
@@ -2,28 +2,25 @@
     position:fixed;
     top:0;
     left:0;
-        width:40%;
-        height:20%; 
-        background:#e6dace; 
-        overflow:auto;
-        margin:auto; 
-        z-index:-1;
+    width:40%;
+    height:20%; 
+    background:#e6dace; 
 }
 
 .page_content {
-    min-height: 100vh;
+    min-height: 85vh;
     position: relative;
     top: 15vh;
     display: flex;
     justify-content: space-between;
-    padding: 50px;
     background-color: #e8e6e6;
-    z-index: -1;
+    margin-bottom:10vh;
   }
 
 .right_side {
     position: relative;
     padding: 20px;
+    padding-top:50px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
